[gd_scene load_steps=11 format=3 uid="uid://bvgtrefdtlsul"]

[ext_resource type="Script" path="res://Scripts/main_scene.gd" id="1_0faxq"]
[ext_resource type="Texture2D" uid="uid://drw315ju84ks3" path="res://Art/star_background.jpg" id="2_03gyf"]
[ext_resource type="TileSet" uid="uid://da3qv5bqnia2y" path="res://Scenes/tilemap_world.tres" id="3_n4anu"]
[ext_resource type="PackedScene" uid="uid://cgax0tyixs3og" path="res://Scenes/pause_menu.tscn" id="3_qkr51"]
[ext_resource type="Script" path="res://Scripts/World_TileMap.gd" id="4_34ivu"]
[ext_resource type="PackedScene" uid="uid://m26fd7j0ngbx" path="res://Scenes/spawn_window.tscn" id="4_j4k08"]
[ext_resource type="PackedScene" uid="uid://mx5gsy2v5cj0" path="res://Scenes/game_over.tscn" id="4_ytf0d"]
[ext_resource type="PackedScene" uid="uid://dx8j1h6gp20xq" path="res://Scenes/clock.tscn" id="5_a43f2"]
[ext_resource type="PackedScene" uid="uid://cgchxlrwd55ih" path="res://Scenes/debug_menu.tscn" id="8_2wg6p"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_pf8xm"]
vertices = PackedVector2Array(5555, 218, 5428, 5305, 20, 4860, 83, 27)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(68, 11, 5572, 203, 5444, 5323, 4, 4875)])
source_geometry_mode = 1
source_geometry_group_name = &"navigation"
cell_size = 32.0

[node name="MainScene" type="Node2D"]
process_mode = 1
script = ExtResource("1_0faxq")

[node name="StarBackground" type="Sprite2D" parent="."]
position = Vector2(18, -82)
scale = Vector2(0.469708, 0.469708)
texture = ExtResource("2_03gyf")

[node name="World_TileMap" type="TileMap" parent="." groups=["navigation"]]
tile_set = ExtResource("3_n4anu")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(131075, 131072, 0, 131076, 131072, 0, 131077, 131072, 0, 131078, 131072, 0, 131079, 131072, 0, 131080, 131072, 0, 196616, 131072, 0, 196617, 131072, 0, 196618, 131072, 0, 196619, 131072, 0, 196620, 131072, 0, 196621, 131072, 0, 262157, 131072, 0, 327693, 131072, 0, 327692, 131072, 0, 393228, 131072, 0, 393227, 131072, 0, 393226, 131072, 0, 393225, 131072, 0, 393224, 131072, 0, 327688, 131072, 0, 327687, 131072, 0, 327686, 131072, 0, 327685, 131072, 0, 327684, 131072, 0, 262148, 131072, 0, 262147, 131072, 0, 196611, 131072, 0, 196612, 131072, 0, 196613, 131072, 0, 196614, 131072, 0, 196615, 131072, 0, 262154, 131072, 0, 262155, 131072, 0, 262156, 131072, 0, 262152, 0, 0, 262151, 131072, 0, 262150, 131072, 0, 262149, 131072, 0, 262153, 131072, 0, 327689, 131072, 0, 327690, 131072, 0, 327691, 131072, 0, 393229, 131072, 0, 131081, 131072, 0, 393223, 131072, 0)
script = ExtResource("4_34ivu")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="World_TileMap"]
navigation_polygon = SubResource("NavigationPolygon_pf8xm")

[node name="Blocks" type="Node2D" parent="."]
process_mode = 1
visible = false

[node name="Life" type="Node2D" parent="."]
process_mode = 1
z_as_relative = false
y_sort_enabled = true

[node name="LifeTimer" type="Timer" parent="Life"]
wait_time = 10.0
autostart = true

[node name="BrainTimer" type="Timer" parent="Life"]
wait_time = 2.0
autostart = true

[node name="SpawnTimer" type="Timer" parent="Life"]
process_mode = 3

[node name="Items" type="Node2D" parent="."]
process_mode = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="FPS" type="Label" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = " FPS"

[node name="Debug" type="Label" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0

[node name="Tuto2" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -205.0
offset_bottom = 283.0
grow_horizontal = 0
text = "W,A,S,D : Move
P : ADD 100 max grass
R: Attack
SPACE: pick-up
X: drop
C: eat


-----DEBUG-------
mouse wheel: zoom in/out
Q/E : add/remove energy
T: teleport"

[node name="speedContainer" type="HBoxContainer" parent="UI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.5
offset_right = 72.5
offset_bottom = 40.0
grow_horizontal = 2
focus_mode = 1
mouse_filter = 2

[node name="speed1" type="Button" parent="UI/speedContainer"]
layout_mode = 2
focus_mode = 0
text = "1x
"

[node name="speed2" type="Button" parent="UI/speedContainer"]
layout_mode = 2
focus_mode = 0
text = "2x
"

[node name="speed10" type="Button" parent="UI/speedContainer"]
layout_mode = 2
focus_mode = 0
text = "10x
"

[node name="speed100" type="Button" parent="UI/speedContainer"]
layout_mode = 2
focus_mode = 0
text = "100x
"

[node name="SleepButton" type="Button" parent="UI"]
visible = false
offset_left = 403.0
offset_top = 8.0
offset_right = 501.0
offset_bottom = 39.0
mouse_filter = 1
text = "Sleep Mode"

[node name="Wspeed" type="Label" parent="UI"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 43.0
offset_right = 36.0
offset_bottom = 66.0
grow_horizontal = 2
text = "Debug Speed"

[node name="ProgressBar" type="ProgressBar" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -105.0
offset_right = 127.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="Label" type="Label" parent="UI/ProgressBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.5
offset_top = -30.0
offset_right = 54.5
offset_bottom = -7.0
grow_horizontal = 2
text = "Loading_grass"

[node name="Pause_menu" parent="UI" instance=ExtResource("3_qkr51")]
process_mode = 3
visible = false
mouse_filter = 1

[node name="GameOver" parent="UI" instance=ExtResource("4_ytf0d")]
visible = false
mouse_filter = 1

[node name="DayCount" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40

[node name="Timer" type="Timer" parent="UI/DayCount"]

[node name="Night_filtre" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.203922, 0.47451, 0.792157, 0.419608)

[node name="Clock" parent="UI" instance=ExtResource("5_a43f2")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -102.0
offset_top = 0.0
offset_right = -102.0
offset_bottom = 0.0
grow_vertical = 1
mouse_filter = 2

[node name="Debug_Menu" parent="UI" instance=ExtResource("8_2wg6p")]
process_mode = 3
visible = false
mouse_filter = 2

[node name="DayTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 15.0
one_shot = true

[node name="NightTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 5.0
one_shot = true

[node name="BlockTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
autostart = true

[node name="SpawnWindow" parent="." instance=ExtResource("4_j4k08")]
visible = false

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
blend_mode = 1

[connection signal="timeout" from="Life/LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="Life/BrainTimer" to="." method="_on_brain_timer_timeout"]
[connection signal="timeout" from="Life/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="pressed" from="UI/speedContainer/speed1" to="." method="_on_speed_1_pressed"]
[connection signal="pressed" from="UI/speedContainer/speed2" to="." method="_on_speed_2_pressed"]
[connection signal="pressed" from="UI/speedContainer/speed10" to="." method="_on_speed_10_pressed"]
[connection signal="pressed" from="UI/speedContainer/speed100" to="." method="_on_speed_100_pressed"]
[connection signal="timeout" from="UI/DayCount/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DayTimer" to="." method="_on_day_timer_timeout"]
[connection signal="timeout" from="NightTimer" to="." method="_on_night_timer_timeout"]
[connection signal="timeout" from="BlockTimer" to="." method="_on_block_timer_timeout"]
[connection signal="timeout" from="BlockTimer" to="World_TileMap" method="_on_block_timer_timeout"]
